[tool.poetry]
name = "mine"
version = "0.1.0"
description = ""
authors = ["ashleendaly <Ashleen.Daly@res-group.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyotp = "^2.9.0"
qrtools = "^0.0.2"
textual = "^0.47.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
