[tool.poetry]
name = "mine"
version = "0.1.0"
description = ""
authors = ["ashleendaly <Ashleen.Daly@res-group.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyotp = "^2.9.0"
textual = "^0.47.1"
python-dotenv = "^1.0.1"
textual-dev = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
